--- a/.github/workflows/deploy-inventory-agent.yml
+++ b/.github/workflows/deploy-inventory-agent.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Login via Azure CLI
         uses: azure/login@v2.1.1
         with:
-            creds: $
+            creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Run inventory agent initializer
         run: |
