--- a/.github/workflows/deploy-shopper-agent.yml
+++ b/.github/workflows/deploy-shopper-agent.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Login via Azure CLI
         uses: azure/login@v2.1.1
         with:
-            creds: $
+            creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Run shopper agent initializer
         run: |
