--- a/.github/workflows/deploy-customer-loyalty-agent.yml
+++ b/.github/workflows/deploy-customer-loyalty-agent.yml
@@ -19,10 +19,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create .env file from secret
-        run: 'echo "$ENV" > src/.env'
+        run: echo "${{ secrets.ENV }}" > src/.env
         shell: bash
         env:
-          ENV: $
+          ENV: ${{ secrets.ENV }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
