--- a/.github/workflows/deploy-inventory-agent.yml
+++ b/.github/workflows/deploy-inventory-agent.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create .env file from secret
-        run: echo "${{ secrets.ENV }}" > src/.env
+        run: echo .env > src/.env
         shell: bash
         env:
           ENV: ${{ secrets.ENV }}
