--- a/.github/workflows/deploy-shopper-agent.yml
+++ b/.github/workflows/deploy-shopper-agent.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create .env file from secret
-        run: echo .env > src/.env
+        run: echo "$ENV" > src/.env
         shell: bash
         env:
           ENV: ${{ secrets.ENV }}
